# scripts

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test_unlock_pdf.yaml
git_batch_sync/: git_batch_sync.py  pyproject.toml
pdf-password-removal/: pdf_password_remover.py
pdf_password_removal/: pdf_password_remover.py
remove_pdf_password/: pyproject.toml  remove_pdf_password.py
unlock_pdf/: README.md  __init__.py  __main__.py  classes.py  enumerations.py  functions.py  main.py  pyproject.toml  unlock_pdf.py
unlock_pdf/src/: __init__.py
unlock_pdf/src/unlock_pdf/: __main__.py  classes.py  enumerations.py  functions.py  types.py
unlock_pdf/src/unlock_pdf/classes/: __init__.py  path_dictionary.py  string_generator_enumeration.py
unlock_pdf/tests/: __init__.py  test_classes.py  test_enumerations.py  test_functions.py  test_main.py  utilities.py
unlock_pdf/tests/classes/: __init__.py  test_path_dictionary.py  test_string_generator_enumeration.py
unlock_pdf/tests/enumerations/: __init__.py  test_error_message.py  test_log_message.py
unlock_pdf/tests/functions/: __init__.py  test_get_passwords.py  test_get_pdf_file_paths.py  test_get_pdf_file_subpaths.py  test_get_unique_inputs.py  test_is_pdf_file.py  test_log_unlock_attempt.py  test_sanitize_path.py  test_unlock_pdf.py  test_unlock_pdf_file.py
work-log-processing/: work_log_preprocessor.py
work_log_processing/: work_log.txt  work_log_preprocessor.py
