[project]
name = "git-batch-sync"
version = "0.1.0"
description = "Script for synchronizing local repository states with their remote counterparts"
authors = [
    {name = "Siege Songsong",email = "cjgsongsong@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "gitpython (>=3.1.46,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
