[project]
name = "unlock-pdf"
version = "0.2.0"
description = "Script for unlocking a password-protected PDF file"
authors = [
    {name = "Siege Songsong",email = "cjgsongsong@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pikepdf (>=10.7.0,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
