[project]
name = "unlock-pdf"
version = "0.7.0"
description = "Script for unlocking password-protected PDF files"
authors = [
    {name = "Siege Songsong",email = "cjgsongsong@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pikepdf (>=10.7.0,<11.0.0)"
]

[tool.poetry.scripts]
unlock-pdf = "src.unlock_pdf.__main__:unlock_pdf"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
